# copyright-check

./: LICENSE  README.md  pyproject.toml
src/copyright_check/: __init__.py
test/: test_check_header.py
test/resources/: comma_separated_year.java  dash_separated_year.java  incorrect.java  invalid.xml  invalidesf.java  invalidesf2.java  invalidyear.java  missing.java  test.java  valid.java  valid.xml  validesf.java  validesf.xml
