[project]
name = "copyright-check"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Mattia Dal Ben", email = "matthewdibi@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "comment-parser>=1.2.5",
]

[project.scripts]
copyright-check = "copyright_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
